# corvus

./: .env.example  .gitignore  HANDOFF.md  README.md  SECURITY.md  docker-compose.yml  package.json
.cursor/rules/: corvus-master-workorder.mdc
.github/workflows/: ci.yml  pages.yml
backend/: Dockerfile  pyproject.toml
backend/src/: __init__.py  config.py  main.py
backend/src/agent/: __init__.py  display.py  graph.py  health_matrix.py  llm.py  pipeline.py
backend/src/ingest/: __init__.py  baseline_profiles.py  csv_adapter.py  database.py  emulator_adapter.py  live_obd.py
backend/src/sql/: __init__.py  query_runner.py
backend/tests/: helpers.py  test_agent_phase3.py  test_health_matrix.py  test_ingest_phase1.py  test_phase0_contract.py  test_public_baselines.py  test_sql_phase2.py
data/: health_score_config.json  schema.sql  ved_baseline_profiles.json
docs/: ACCESS_MANIFEST.md  ARCHITECTURE.md  ASSETS.md  CORVUS_DIVERSE_VEHICLES_WORKORDER.md  CORVUS_MASTER_WORKORDER.md  DATASETS.md  DESIGN.md  DOCKER_WSL2_DISK_CAP.md  INSTALL.md  METHODOLOGY.md  OBD_VERIFICATION.md  PHASES.md  SESSION_HANDOFF.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
powerbi/: README.md  corvus_powerbi_theme.json  report_manifest.json
scripts/: check_all.py  check_phase0.py  check_phase1.py  check_phase2.py  check_phase3.py  check_phase4.py  check_phase5.py  check_phase6.py  derive_ved_baselines.py  export_frontend_dashboard.py  export_powerbi_dataset.py  fetch_public_obd_dataset.py  fetch_ved_dataset.py  seed_database.py  transform_obd_csv.py
(+50 files in other folders)
