[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corvus-backend"
version = "0.1.0"
description = "Corvus OBD-II diagnostic analysis backend scaffold"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "uhchi" }]
dependencies = [
    "fastapi>=0.115",
    "pydantic-settings>=2.7",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

